@@ -1,5 +1,6 @@
 Changes for 1.1beta1:
 
+ - fixed crash of WIN32 agent when processing eventlog[]. Many thanks to Simon Lund. (Alexei)
  - fixed update of triggers in certain situations (Alexei)
  - French translation (Alexei)
  - German translation. Thanks to J. Pawlowski (Alexei)
